# simple-perplexity

./: .gitignore  README.md  README_CN.md  README_EN.md
backend/: .env.example  pyproject.toml
backend/app/: api.py  config.py  graph.py  graph_constants.py  llm.py  main.py  schema.py  tools.py  utils.py
backend/app/nodes/: __init__.py  answer.py  question_analysis.py  researcher.py  supervisor.py  tool.py  tool_router.py
backend/reference/: event.txt
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/.kiro/specs/chat-interface/: design.md  requirements.md  tasks.md
frontend/fix_doc/: CHAT_THEME_FIX_REPORT.md  DARK_THEME_REDESIGN.md  TEXT_SELECTION_FIX.md
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/markdown-test/: page.tsx
frontend/src/app/selection-test/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/theme-test/: page.tsx
frontend/src/components/chat/: .gitkeep  ChatContainer.tsx  ChatContainerDemo.tsx  ChatInput.tsx  ChatInputDemo.tsx  FloatingThemeToggle.tsx  MessageContent.tsx  MessageDemo.tsx  MessageItem.tsx  MessageList.tsx  MessageListDemo.tsx  MessageSkeleton.tsx  StreamingDemo.tsx  ToolCallDisplay.tsx  ToolCallSkeleton.tsx  index.ts
frontend/src/components/ui/: button.tsx  (+4 more)
frontend/src/hooks/: useChat.ts  useTheme.ts
frontend/src/services/: chatService.ts  themeService.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts  chat.ts  errors.ts  theme.ts
frontend/src/utils/: constants.ts  errorHandler.ts  sseParser.ts  themeUtils.ts
(+12 files in other folders)
